Updates and new songs.

--- a/songs/Malá_Dáma.tex
+++ b/songs/Malá_Dáma.tex
@@ -1,52 +1,51 @@
 \sclearpage\beginsong{Malá Dáma}[by={Kabát}]
-\transpose{10}
 \beginverse
-\[Em]Utrhla trávu a začla  \[Am]hrát\brk
-ta malá dáma z předmě\[G]stí\brk
-co umí \[D] lidem z dlaní \[Em] číst\brk
-\[Em]tam kočky zrána mívaj  \[Am]hlad\brk
-po noci plný neřes\[G]tí\brk
-je pohla\[D]dí a dá jim  \[Em]jíst\brk
-\[Am]po tmě se toulá a ve dne  \[Em]spí\brk
-a její oči vědí víc než \[Am] mý\brk
-došly mi slova, já stál tam \[C] jen\brk
-s touhle \[B7]jedinou bych \[Em]zemřel\brk
+\[Am]Utrhla trávu a začla  \[Dsus2]hrát\brk
+ta malá dáma z předmě\[F]stí\brk
+co umí \[E7] lidem z dlaní \[Am] číst\brk
+tam kočky zrána mívaj  hlad\brk
+po noci plný neřestí\brk
+je pohladí a dá jim  jíst\brk
+*\[Dm]po tmě se \[Dsus2]toulá a ve dne spí\[Am]\brk
+a její oči vědí víc než \[Dm] mý\brk
+došly mi \[Dsus2]slova, já stál tam \[F] jen\brk
+s touhle \[E7]jedinou bych \[Am]zemřel\brk
 \endverse
 \beginchorus
-\[Em]S touhle bych  \[C]zemřel v jedinej  \[G]den\brk
-a jestli \[B7] Vám to nesta\[Em]čí\brk
-kdyby tam \[C] stála stovka \[G] žen,\brk
-vyzvu ji \[B7] k tanci a to netan\[Em]čím\brk
+\[Am]S touhle bych  \[F]zemřel v jedinej  \[C]den\brk
+a jestli \[E7] Vám to nesta\[Am]čí\brk
+kdyby tam \[F] stála stovka \[C] žen,\brk
+vyzvu ji \[E7] k tanci a to netan\[E+]čím\[Am]\brk
 \endchorus
 \beginverse
-\[Em]Tam za tratí svý doupě \[Am]má\brk
-mince po kašnách pos\[G]bírá\brk
-a pak je \[D]skládá na ko\[Em]lej\brk
-\[Em]staví si chrám, plechovej \[Am]most\brk
-už po něm kráčí první \[G]host\brk
-tak ať ho \[D]nohy nebo\[Em]lej\brk
-\[Am]prošla si peklem a kouzla \[Em]zná\brk
-přejetý mince po\[Am]čítá\brk
-a kdo ji spatří je zatra\[C]cen\brk
-s touhle \[B7]jedinou bych \[Em]zemřel\brk
+Tam za tratí svý doupě má\brk
+mince po kašnách posbírá\brk
+a pak je skládá na kolej\brk
+staví si chrám, plechovej most\brk
+už po něm kráčí první host\brk
+tak ať ho nohy nebolej\brk
+prošla si peklem a kouzla zná\brk
+přejetý mince počítá\brk
+a kdo ji spatří je zatracen\brk
+s touhle jedinou bych zemřel\brk
 \endverse
 \beginchorus
-\[Em]S touhle bych  \[C]zemřel v jedinej  \[G]den\brk
-a jestli \[B7] Vám to nesta\[Em]čí\brk
-kdyby tam \[C] stála stovka \[G] žen,\brk
-vyzvu ji \[B7] k tanci a to netan\[Em]čím\brk
-Budu si \[Em] pamatovat na tu \[C] chvíli\brk
-když hrála \[G] znělo to jak Paga\[D]nini\brk
-a já už \[Em] věděl, že jsem ztrace\[C]nej\brk
-zeptal se \[G] za kolik s pocitem \[B7] viny\brk
+S touhle bych  zemřel v jedinej  den\brk
+a jestli  Vám to nestačí\brk
+kdyby tam  stála stovka  žen,\brk
+vyzvu ji  k tanci a to netančím\brk
+Budu si  pamatovat na tu  chvíli\brk
+když hrála  znělo to jak Paganini\brk
+a já už  věděl, že jsem ztracenej\brk
+zeptal se  za kolik s pocitem  viny\brk
 \endchorus
 \beginchorus
-\[Em]S touhle bych  \[C]zemřel v jedinej  \[G]den\brk
-a jestli \[B7] Vám to nesta\[Em]čí\brk
-kdyby tam \[C] stála stovka \[G] žen,\brk
-vyzvu ji \[B7] k tanci a to netan\[Em]čím\brk
-\[Em]S touhle bych  \[C]zemřel v jedinej  \[G]den\brk
-a jestli \[B7] Vám to nesta\[Em]čí\brk
-kdyby tam \[C] stála stovka \[G] žen,\brk
-vyzvu ji \[B7] k tanci a to netan\[Em]čím[/tab]quot;,quo\brk
+S touhle bych  zemřel v jedinej  den\brk
+a jestli  Vám to nestačí\brk
+kdyby tam  stála stovka  žen,\brk
+vyzvu ji  k tanci a to netančím\brk
+S touhle bych  zemřel v jedinej  den\brk
+a jestli  Vám to nestačí\brk
+kdyby tam  stála stovka  žen,\brk
+vyzvu ji  k tanci a to netančím\brk
 \endchorus\endsong
