--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,11 +1,12 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sat Apr  1 11:07:34 CEST 2023 by link-doc
+% Automatically generated at Mon Apr 10 15:31:09 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
 \input{songs/1_Signální}
 \input{songs/Accidentally_In_Love}
 \input{songs/Africa}
+\input{songs/Amerika}
 \input{songs/Anděl}
 \input{songs/Ani_K_Stáru}
 \input{songs/Až_Mi_Bude_Pětašedesát}
@@ -35,6 +36,7 @@
 \input{songs/Duše_Z_Gumy}
 \input{songs/Ententýky}
 \input{songs/Fair_Play}
+\input{songs/Flowers}
 \input{songs/Get_Lucky}
 \input{songs/Good_Riddance_Time_Of_Your_Life}
 \input{songs/Grónská_písnička}
@@ -112,6 +114,7 @@
 \input{songs/Sametová}
 \input{songs/Sbohem_Galánečko}
 \input{songs/Sbírka_Zvadlejch_Růží}
+\input{songs/Sen}
 \input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Starý_Muž}
@@ -135,7 +138,6 @@
 \input{songs/Vymlácený_Entry}
 \input{songs/Vymyslená}
 \input{songs/Včelín}
-\input{songs/Waterloo}
 \input{songs/When_All_Is_Said_And_Done}
 \input{songs/When_Youre_Gone}
 \input{songs/With_Or_Without_You}
@@ -149,6 +151,8 @@
 \input{songs/Černý_Brejle}
 \input{songs/Šaman}
 \input{songs/Šrouby_A_Matice}
+\input{songs/Šrouby_Do_Hlavy}
+\input{songs/Šťastnej_Chlap}
 \input{songs/ŽŽ_DomcaSongs/AA_intro}
 \input{songs/ŽŽ_DomcaSongs/Better_Together}
 \input{songs/ŽŽ_DomcaSongs/Bosorka}
@@ -184,4 +188,5 @@
 \input{songs/ŽŽ_YbokemSongs/Not_Fair}
 \input{songs/ŽŽ_YbokemSongs/Runaway_Train}
 \input{songs/ŽŽ_YbokemSongs/Stitches}
+\input{songs/ŽŽ_YbokemSongs/Waterloo}
 \input{songs/ŽŽŽ-endsongs}
