--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Apr 10 15:31:09 CEST 2023 by link-doc
+% Automatically generated at Sun Apr 16 17:19:38 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -120,6 +120,7 @@
 \input{songs/Starý_Muž}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sáro}
+\input{songs/Taky_Jsem_Se_Narodil_Bos}
 \input{songs/Thinking_Out_Loud}
 \input{songs/This_Is_The_Life}
 \input{songs/Touha}
@@ -140,6 +141,7 @@
 \input{songs/Včelín}
 \input{songs/When_All_Is_Said_And_Done}
 \input{songs/When_Youre_Gone}
+\input{songs/Wild_World}
 \input{songs/With_Or_Without_You}
 \input{songs/Wonderwall}
 \input{songs/Zalůbení}
@@ -185,7 +187,9 @@
 \input{songs/ŽŽ_YbokemSongs/Cesta_Z_Města}
 \input{songs/ŽŽ_YbokemSongs/Dont_Go_Breaking_My_Heart}
 \input{songs/ŽŽ_YbokemSongs/Jdevozem}
+\input{songs/ŽŽ_YbokemSongs/Moonlight_Shadow}
 \input{songs/ŽŽ_YbokemSongs/Not_Fair}
+\input{songs/ŽŽ_YbokemSongs/One_Of_Us}
 \input{songs/ŽŽ_YbokemSongs/Runaway_Train}
 \input{songs/ŽŽ_YbokemSongs/Stitches}
 \input{songs/ŽŽ_YbokemSongs/Waterloo}
