--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sun Apr 16 17:19:38 CEST 2023 by link-doc
+% Automatically generated at Fri Apr 21 20:45:51 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -89,6 +89,7 @@
 \input{songs/Mrs_Robinson}
 \input{songs/Mám_Doma_Kočku}
 \input{songs/Mám_Jizvu_Na_Rtu}
+\input{songs/Místečko}
 \input{songs/Můj_Svět}
 \input{songs/Naděje}
 \input{songs/Nagasaki_Hirošima}
