--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Fri Apr 21 20:45:51 CEST 2023 by link-doc
+% Automatically generated at Tue Apr 25 09:22:50 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -136,7 +136,6 @@
 \input{songs/V_Lese}
 \input{songs/Veď_mě_dál,_cesto_má}
 \input{songs/Viva_La_Vida}
-\input{songs/Voda_Živá}
 \input{songs/Vymlácený_Entry}
 \input{songs/Vymyslená}
 \input{songs/Včelín}
@@ -154,7 +153,6 @@
 \input{songs/Černý_Brejle}
 \input{songs/Šaman}
 \input{songs/Šrouby_A_Matice}
-\input{songs/Šrouby_Do_Hlavy}
 \input{songs/Šťastnej_Chlap}
 \input{songs/ŽŽ_DomcaSongs/AA_intro}
 \input{songs/ŽŽ_DomcaSongs/Better_Together}
@@ -193,5 +191,7 @@
 \input{songs/ŽŽ_YbokemSongs/One_Of_Us}
 \input{songs/ŽŽ_YbokemSongs/Runaway_Train}
 \input{songs/ŽŽ_YbokemSongs/Stitches}
+\input{songs/ŽŽ_YbokemSongs/Voda_Živá}
 \input{songs/ŽŽ_YbokemSongs/Waterloo}
+\input{songs/ŽŽ_YbokemSongs/Šrouby_Do_Hlavy}
 \input{songs/ŽŽŽ-endsongs}
