--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Tue Apr 25 09:22:50 CEST 2023 by link-doc
+% Automatically generated at Fri May 19 17:39:01 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -177,6 +177,7 @@
 \input{songs/ŽŽ_KikiSongs/Shallow}
 \input{songs/ŽŽ_LuckaSongs/AA_intro}
 \input{songs/ŽŽ_LuckaSongs/The_Saga_Begins}
+\input{songs/ŽŽ_LuckaSongs/Už_To_Nenapravím}
 \input{songs/ŽŽ_LuckaSongs/Čarodějnice_Z_Amesbury}
 \input{songs/ŽŽ_YbokemSongs/1_Plus_1}
 \input{songs/ŽŽ_YbokemSongs/AA_intro}
