--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Fri May 19 17:39:01 CEST 2023 by link-doc
+% Automatically generated at Wed Jul 12 07:35:46 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -57,11 +57,13 @@
 \input{songs/Jarní_Tání}
 \input{songs/Jasná_Zpráva}
 \input{songs/Jdou_Po_Mně_Jdou}
+\input{songs/Jižní_Kříž}
 \input{songs/Jožin_Z_Bažin}
 \input{songs/Každý_Ráno}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
 \input{songs/Když_Nemůžeš_Tak_Přidej}
 \input{songs/Klára}
+\input{songs/Královna_Z_Dundrum_Bay}
 \input{songs/Krátke_Lásky}
 \input{songs/Kráľovna_Bielych_Tenisiek}
 \input{songs/Kupte_Si_Hřebeny}
@@ -108,6 +110,7 @@
 \input{songs/Pompeii}
 \input{songs/Proklínám}
 \input{songs/Proměny}
+\input{songs/Ptáčata}
 \input{songs/Radioactive}
 \input{songs/Ring-O-Ding}
 \input{songs/Riptide}
@@ -116,6 +119,8 @@
 \input{songs/Sbohem_Galánečko}
 \input{songs/Sbírka_Zvadlejch_Růží}
 \input{songs/Sen}
+\input{songs/Sila_Starejch_Vin}
+\input{songs/Slunovrat}
 \input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Starý_Muž}
