--- a/songs/1970.tex
+++ b/songs/1970.tex
@@ -3,38 +3,37 @@
 \beginverse*{\nolyrics Intro: \[C]    \[D]    \[F]    \[C]         \brk
 }\endverse
 \beginverse
-\[C]Nevím jestli je to\[Dm] znát, mozna by bylo lepsi\brk
-\[C/E]lhat, jsem silnej rocnik sedmde\[F]sat, tak zacni pocitat.\brk
-\[C]Nechci tu hloupe vzpom\[Dm]inat, koho taky dneska\brk
-\[C/E]zajima silnej rocnik sedmd\[F]esat, tak zacni pocitat.\brk
-\[C]Tenkrat tu bejval jinej st\[Dm]at a ja byl blbej na kvadr\[C/E]at,\brk
-jsem silnej rocnik sed\[F]mdesat,treba napriklad...\[G]\brk
+\[C]Nevím jestli je to\[Dm] znát, možná by bylo lepší\brk
+\[C/E]lhát, jsem silný ročník \[F]sedmdesát, tak začni počítat.\brk
+\[C]Nechci tu hloupé vzpom\[Dm]ínat, koho taky dneska\brk
+\[C/E]zajímá silný ročník sedmd\[F]esát, tak začni počítat.\brk
+\[C]Tenkrát tu byla jiná stá\[Dm]t a já byl blbej na kvadr\[C/E]át,\brk
+jsem silný ročník sed\[F]mdesát, třeba například...\[G]\brk
 \endverse
 \beginchorus
-\[G]Nasi mi vzdycky rika\[Am] li, jen nehas co te nepa\[F] li, jakej pan takovej kra\[C]m.\brk
-\[G]Nasi mi vzdycky rika\[Am] li, co muzes sleduj z povzda\[F] li a nikdy nebojuj sa\[C]m.\brk
+\[G]Naši mi vždycky říka\[Am]li, jen nehas co tě nepá\[F]lí, jaký pán takový krá\[C]m.\brk
+\[G]Naši mi vždycky říka\[Am]li, co můžeš sleduj z povzda\[F]lí a nikdy nebojuj s\[C]ám.\brk
  \[C]    \[D]    \[F]    \[C]         \brk
 \endchorus
 \beginverse
-\[C]Nevim jestli je to\[Dm] znat, mozna by bylo lepsi\brk
-\[C/E]lhat, jsem silnej rocnik sedmde\[F]sat, nemoh' jsem si vybirat.\brk
-\[C]Tak mi to prestan vyci\[Dm]tat, narikat co jsem za pripad,\brk
-\[C/E]jsem silnej rocnik sedmdes\[F]at a mozna, ze jsem rad.\[G]\brk
+\[C]Nevím jestli je to\[Dm] znát, možná by bylo lepší\brk
+\[C/E]lhát, jsem silný ročník \[F]sedmdesát, nemoh' jsem si vybírat.\brk
+\[C]Tak mi to přestaň vytý\[Dm]kat, naříkat co jsem za případ,\brk
+\[C/E]jsem silný ročník sedmdes\[F]át a možná, že jsem rád.\[G]\brk
 \endverse
 \beginchorus
-\[G]Nasi mi vzdycky rika\[Am] li, jen nehas co te nepa li\[F], jakej pan takovej k\[C]ram.\brk
-\[G]Nasi mi vzdycky rika\[Am] li, co muzes sleduj z povzda\[F] li a nikdy nebojuj sa\[G]m.\brk
+\[G]Naši mi vždycky říka\[Am]li, jen nehas co tě nepá li\[F], jaký pán takový k\[C]rám.\brk
+\[G]Naši mi vždycky říka\[Am]li, co můžeš sleduj z povzda\[F]lí a nikdy nebojuj s\[G]ám.\brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
-Cas \[F]padi, cas leti, tezko ta \[G]leta vratis zpet a tak i \[C]Husakovy deti\brk
-dospely \[Am]do Kristovych let.\brk
-Cas pa\[F]di, cas leti a j\[G]e to zvlastni svet a tak i \[C]Husakovy deti dospely\brk
-d\[Dm]o Kristovych let.\brk
-Cas \[F]padi, cas leti, tezko ta \[G]leta vratis zpet a tak i \[C]Husakovy deti\brk
-dospely \[Am]do Kristovych let.\brk
-Cas pa\[F]di, cas leti a j\[G]e to zvlastni svet a tak i \[C]Husakovy deti dospely\brk
-d\[D]o Kristovych let.\brk
-Cas\[F] padi, cas letí.
-
+Čas \[F]pádí, čas letí, těžko ta \[Gsus4]léta vrátíš zpět a tak i \[C]Husákovy děti\brk
+dospěly \[Am]do Kristových let.\brk
+Čas pá\[F]dí, čas letí a j\[Gsus4]e to zvláštní svět a tak i \[C]Husákovy děti dospěly\brk
+d\[Dm]o Kristových let.\brk
+Čas \[F]pádí, čas letí, těžko ta \[Gsus4]léta vrátíš zpět a tak i \[C]Husákovy děti\brk
+dospěly \[Am]do Kristových let.\brk
+Čas pá\[F]dí, čas letí a j\[Gsus4]e to zvláštní svět a tak i \[C]Husákovy děti dospěly\brk
+d\[D]o Kristových let.\brk
+Čas\[F] pádí, čas letí.
 }
 \endverse\endsong
