--- a/songs/Africa.tex
+++ b/songs/Africa.tex
@@ -31,6 +31,12 @@ As sure as \[A/E]Kilimanjaro \[G]rises like O\[D]lympus above the Se\[Dmaj]r - e
 \[Emi]Gonna take a l\[C]ot to drag me a\[G]way from \[D]you
 \[Emi]There's nothing that a \[C]hundred men or \[G]more could ever \[D]do
 \[Emi]I bless the r\[C]ains down i\[G]n  Afri\[D]ca
+\[Emi]Gonna take some \[C]time to do the t\[G]hings we never \[Hm]had..\[D].\[Em]\[D]\[G]  \[F#m]   \[Hm]   
+\endchorus
+\beginchorus
+\[Emi]Gonna take a l\[C]ot to drag me a\[G]way from \[D]you
+\[Emi]There's nothing that a \[C]hundred men or \[G]more could ever \[D]do
+\[Emi]I bless the r\[C]ains down i\[G]n  Afri\[D]ca
 \[Emi]Gonna take some \[C]time to do the t\[G]hings we never \[Hm]had..\[D].\[Em]\[D]\[G]  
 \endchorus
 \endsong
