--- a/songs/Dobrák_Od_Kosti.tex
+++ b/songs/Dobrák_Od_Kosti.tex
@@ -3,21 +3,35 @@
 \[D]Jsem ten, kdo j\[A]ednou tvý \[G]tělo zakryje. \[C]\brk
 \[D]Jsem ten, kdo \[A]tě jednou \[G]oddělá. \brk
 \[D]Potkala's zk\[A]rátka koho's \[G]neměla.  \[C]         \brk
+\endverse
+\beginverse
 \[D]Jsi budoucí \[A]krev v mojí \[G]posteli \brk
 \[D]Jsem ten, kdo tě j\[A]ednou jisto\[G]jistě zast\[C]řelí \brk
 \[D]Jsem ten kdo ty \[A]tvoje krásný oči jednou \[G]zatlačí \brk
 \[D]jsi moje všec\[A]hno a mě to ne\[G]stačí \[C]\brk
+\endverse
+\beginchorus
 \[D]Je to vážně silná káva, \[A]pláč a nebo vztek \[G]nic už s tím nenaděláš \brk
 \[D]nech mě jenom hádat, jak \[A]jsi hebká na dotek \[G]krásná a nedospělá \brk
+\endchorus
+\beginverse
 \[D]Víš,všech\[A]no má aspoň m\[G]alý kaz \brk
 \[D]jsem ten, kdo ti \[A]jednou z\[G]lomí v\[C]az \brk
 \[D]Má milá vždyť \[A]mě znáš jsem dobrák \[G]od kosti \brk
 \[D]a ty jsi ta co \[A]mi to jednou všec\[G]hno odpustí \[C]\brk
-\[D]Sejde z očí sejde z mysli \brk
+\endverse
+\beginchorus
+||:\[D]Sejde z očí sejde z mysli \brk
 jenom \[A]blázen věří na nesmysly \brk
 \[G7]láska je čaroděj a ticho prý léčí, \brk
-\[D]Je to vážně silná káva, \[A]pláč a nebo vztek \[G]nic už s tím nenadě\[C]láš \brk
+ale zákon hovoří jasnou řečí:||
+\endchorus
+\beginchorus
+\[D]Je to vážně silná káva, \[A]pláč a nebo vztek \[G]nic už s tím nenaděláš \brk
 \[D]nech mě jenom hádat, jak \[A]jsi hebká na dotek  \[G]krásná a nedospělá \brk
+\endchorus
+\beginverse
 \[D]Má milá jak \[A]ti je, tak jak \[G]ti je? \brk
-\[D]Jsem ten, kdo j\[A]ednou tvý tělo\[G] zakryje.
-\endverse\endsong
+\[D]Jsem ten, kdo j\[A]ednou tvý tělo\[G] zakryje.\[D]
+\endverse
+\endsong
