--- a/songs/Hrobar.tex
+++ b/songs/Hrobar.tex
@@ -1,4 +1,4 @@
-\sclearpage\beginsong{Hrobar}[by={Premier}]
+\sclearpage\beginsong{Hrobař}[by={Premier}]
 \beginverse
 \[C]V mládí jsem se učil hrobařem\brk
 \[Am]jezdit s hlínou, jezdit s trakařem\brk
