--- a/songs/Hruška.tex
+++ b/songs/Hruška.tex
@@ -33,5 +33,4 @@ Kéž \[D] bych byl \[G] nikdy \[A] nepoz\[D]nal\brk
 Kéž \[D] bych byl \[G] nikdy \[A] nepoz\[D]nal\brk
 \[D]panny \[A] černoo\[D]ké \brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endsong
