--- a/songs/Klára.tex
+++ b/songs/Klára.tex
@@ -1,4 +1,5 @@
 \sclearpage\beginsong{Klára}[by={Chinaski}]
+\transpose{11}
 \beginverse*{\nolyrics Intro: \[C]Ná nananan \[Am]nanananananá\[F]  ná\[Fm]  \brk\[C]Ná nananan \[Am]nanananananá\[F]  ná\[Fm]  áááá\brk
 }\endverse
 \beginverse
