--- a/songs/Let_It_Go.tex
+++ b/songs/Let_It_Go.tex
@@ -32,6 +32,7 @@ And the \[Em]fears that once con\[D]trolled me can't \[Asus4]get to me at \[A]al
 \[D]It's time to see what I can do\[C]\brk
 To test the limits and break \[D]through\brk
 No right, no wrong, no rules for \[Cadd9]me\brk
+I am free
 \endchorus
 \beginchorus
 Let it \[G]go, let it \[D/F#]go\brk
@@ -54,5 +55,5 @@ Let it \[G]go, let it \[D/F#]go\brk
 That \[Em7]perfect girl is \[Cadd9]gone\brk
 \[G]Here I \[D/F#]stand in the\[Em7] light of \[Cadd9]day      \[Cm]         \brk
 Let the \[Bm7]storm rage o\[Bb]n\brk
-The \[C]cold never bothered me anyway[/tab]quot;,quo\brk
+The \[C]cold never bothered me anyway\brk
 \endchorus\endsong
