--- a/songs/Láska_Na_Vsi.tex
+++ b/songs/Láska_Na_Vsi.tex
@@ -1,10 +1,11 @@
 \sclearpage\beginsong{Láska Na Vsi}[by={Pokáč}]
-\beginverse*{\nolyrics Intro: \[C]   \[Am]    \[G]    \[G7]   \[C]         \brk\[C]Vzpomínáš, jak poznali jsme se \[Am]na hasičským plese,\brk Já \[G]rámě nabídnul ti, když \[G7]hráli Kata\[C]pulti.\brk Já \[C]nebrala tě vážně a \[Am]myslela dál na žně,\brk Pak \[G]vypil jsi pár rumů a \[G7]já tě vlekla \[C]domů.\brk
-}\endverse
-\beginchorus
+\beginverse
+\[C]Vzpomínáš, jak poznali jsme se \[Am]na hasičským plese,\brk Já \[G]rámě nabídnul ti, když \[G7]hráli Kata\[C]pulti.\brk Já \[C]nebrala tě vážně a \[Am]myslela dál na žně,\brk Pak \[G]vypil jsi pár rumů a \[G7]já tě vlekla \[C]domů.\brk
+\endverse
+\beginverse*{\nolyrics [Bridge]: 
 \[Am]Byla to láska jako \[Em]trám,\brk
 Jak ten \[F]trám co tenkrát ve stodole \[G]spad na hlavu nám.\brk
-\endchorus
+}\endverse
 \beginchorus
 Když jsme se \[C]milovali celý den \[Am]na seně i za stromem,\brk
 \[G]V kostele či na poli, když \[G7]kolem řvaly \[C]traktory\brk
@@ -18,10 +19,10 @@ Pak \[G]počali jsme dítě a \[G7]já si musel \[C]vzít tě.\brk
 A \[C]když nás farář zdárně \[Am]oddal v hasičárně,\brk
 \[G]Plakaly babičky i \[G7]alkáči z la\[C]vičky.\brk
 \endverse
-\beginchorus
+\beginverse*{\nolyrics [Bridge]: 
 \[Am]Furt je to láska jako \[Em]trám,\brk
 Jen tebe \[F]a tu naší malou vísku \[G]navždy v srdci mám.\brk
-\endchorus
+}\endverse
 \beginchorus
 Tam jsme se \[C]milovali celý den \[Am]na seně i za stromem,\brk
 \[G]V kostele či na poli, když \[G7]kolem řvaly \[C]traktory\brk
