--- a/songs/Lásko_Má_Já_Stůňu.tex
+++ b/songs/Lásko_Má_Já_Stůňu.tex
@@ -1,4 +1,5 @@
 \sclearpage\beginsong{Lásko Má Já Stůňu}[by={Helena Vondráčková}]
+\capo{4}
 \beginverse
 Já, \[Am]ač mám spánek \[Em]bezesný,\brk
 mně \[D]včera \[E]sen se \[Am]zdál.\brk
@@ -6,10 +7,10 @@ mně \[D]včera \[E]sen se \[Am]zdál.\brk
 mně \[D]navští\[E]vil sám \[F]král.\brk
 \endverse
 \beginchorus
-Ř\[G]ekl: b\[C]dquo;Lásko má\[G], já stůňu,\brk
+Ř\[G]ekl: \[C]"Lásko má\[G], já stůňu,\brk
 svoji \[Dm]pýchu já jen \[Am]hrál.\brk
 Kvůli \[C]vám se vzdávám \[F]trůnu,\brk
-kleno\[G]tů i kate\[E7]drál.ldquo;\brk
+kleno\[C]tů\[G] i kate\[E7]drál."\brk
 \endchorus
 \beginverse
 Ač \[Am]den mám jindy \[Em]poklidný,\brk
@@ -18,17 +19,17 @@ dnes \[D]nevím \[E]kudy \[Am]kam.\brk
 a \[D]trápí \[E]mě král \[F]sám. \[G]         \brk
 \endverse
 \beginchorus
-Ř\[G]ekl: b\[C]dquo;Lásko má\[G], já stůňu,\brk
+Ř\[G]ekl: \[C]"Lásko má\[G], já stůňu,\brk
 svoji \[Dm]pýchu já jen \[Am]hrál.\brk
 Kvůli \[C]vám se vzdávám \[F]trůnu,\brk
-kleno\[G]tů i kate\[C]drál.\[G]ldquo;\brk
-Ř\[G]ekl: b\[C]dquo;Lásko má\[G], já stůňu,\brk
+kleno\[C]tů i \[G]kate\[C]drál.\[G]"\brk
+Ř\[G]ekl: \[C]"Lásko má\[G], já stůňu,\brk
 svoji \[Dm]pýchu já jen \[Am]hrál.\brk
 Kvůli \[C]vám se vzdávám \[F]trůnu,\brk
-kleno\[G]tů i kate\[C]drál.\[G]ldquo;\brk
-Ř\[G]ekl: b\[C]dquo;Lásko má\[G], já stůňu,\brk
+kleno\[C]tů i \[G]kate\[C]drál.\[G]"\brk
+Ř\[G]ekl: \[C]"Lásko má\[G], já stůňu,\brk
 svoji \[Dm]pýchu já jen \[Am]hrál.\brk
 Kvůli \[C]vám se vzdávám \[F]trůnu,\brk
-kleno\[G]tů
+kleno\[C]tů i \[G]kate\[C]drál
 \endchorus
 \endsong
