--- a/songs/Magdálena.tex
+++ b/songs/Magdálena.tex
@@ -1,46 +1,46 @@
-\sclearpage\beginsong{Magdalena}[by={Jelen (Czech Republic)}]
+\sclearpage\beginsong{Magdalena}[by={Jelen}]
 \beginverse*{\nolyrics Intro: 
- \[A]   \[D]   \[A]   \[D]   \[A]         \brk
+ \[A]   \[Dsus2]   \[A]   \[Dsus2]   \[A]         \brk
 }\endverse
 \beginverse
-Zapal ten oheň ve mně. \[D]Čeho se bojíš?\brk
-\[A]Zápalkou škrtni jemně. \[D]         \brk
-\[A]Zapal ten oheň ve mně. \[D]Čeho se bojíš?\brk
-\[A]zimou se celá třeseš, \[D]proč venku stojíš.\brk
-Pojď \[A]dál, prosím tě, \[D]nenech se,  prosit se \[A]dál - \[D]nenech se.\brk
-A\[A]hhhh \[D]ah ah  \[A]ahh a\[D]h ah  \brk
+Zapal ten oheň ve mně. \[Dsus2]Čeho se bojíš?\brk
+\[A]Zápalkou škrtni jemně. \[Dsus2]         \brk
+\[A]Zapal ten oheň ve mně. \[Dsus2]Čeho se bojíš?\brk
+\[A]zimou se celá třeseš, \[Dsus2]proč venku stojíš.\brk
+Pojď \[A]dál, prosím tě, \[Dsus2]nenech se,  prosit se \[A]dál - \[Dsus2]nenech se.\brk
+A\[A]hhhh \[Dsus2]ah ah  \[A]ahh a\[Dsus2]h ah  \brk
 \endverse
 \beginverse
-\[A]Sedíme na pavlači, \[D]přichází ráno, \[A]tobě se lesknou o\[D]či.\brk
-\[A]Sedíme na pavlači, \[D]přichází ráno \[A]a mně se hlava to\[D]čí.\brk
-Pojď \[A]dál, prosím tě, \[D]nenech se, prosit se \[A]dál \[D]nenech se.\brk
+\[A]Sedíme na pavlači, \[Dsus2]přichází ráno, \[A]tobě se lesknou o\[Dsus2]či.\brk
+\[A]Sedíme na pavlači, \[Dsus2]přichází ráno \[A]a mně se hlava to\[Dsus2]čí.\brk
+Pojď \[A]dál, prosím tě, \[Dsus2]nenech se, prosit se \[A]dál \[Dsus2]nenech se.\brk
 \endverse
 \beginchorus
 \[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí.\brk
 \[A]Magdaléno, tvoje vlasy,\brk
 \[F#m]Leží pod mou postelí a \[E]i když jsme to nechtěli,\brk
 \[A]Oblíkáš se, pročpak asi?\brk
-\[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí jsem \[A]sám.    \[D]  \[A]  \[D]         \brk
+\[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí jsem \[A]sám.    \[Dsus2]  \[A]  \[Dsus2]         \brk
 \endchorus
 \beginverse
-\[A]Stojíme na rozcest\[D]í a zvony zvoní, \[A]daleko od boles\[D]tí.\brk
-\[A]Stojíme na rozcest\[D]í a zvony zvoní, \[A]možná nás čeká štěs\[D]tí.\brk
-Pojď \[A]dál. Prosím tě \[D]nenech se. Prosit se \[A]dá \[D]nenech se.\brk
+\[A]Stojíme na rozcest\[Dsus2]í a zvony zvoní, \[A]daleko od boles\[Dsus2]tí.\brk
+\[A]Stojíme na rozcest\[Dsus2]í a zvony zvoní, \[A]možná nás čeká štěs\[Dsus2]tí.\brk
+Pojď \[A]dál. Prosím tě \[Dsus2]nenech se. Prosit se \[A]dá \[Dsus2]nenech se.\brk
 \endverse
 \beginchorus
 \[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí.\brk
 \[A]Magdaléno, tvoje vlasy,\brk
 \[F#m]Leží pod mou postelí a \[E]i když jsme to nechtěli,\brk
 \[A]Oblíkáš se, pročpak asi?\brk
-\[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí jsem \[A]sám.    \[D]         \brk
+\[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí jsem \[A]sám.    \[Dsus2]         \brk
 \endchorus
 \beginchorus
 \[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí.\brk
 \[A]Magdaléno, tvoje vlasy,\brk
 \[F#m]Leží pod mou postelí a \[E]i když jsme to nechtěli,\brk
 \[A]Oblíkáš se, pročpak asi?\brk
-\[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí jsem \[A]sám.    \[D]         \brk
- \[A]    \[D]    \[A]    \[D]         \brk
+\[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí jsem \[A]sám.    \[Dsus2]         \brk
+ \[A]    \[Dsus2]    \[A]    \[Dsus2]         \brk
 \[F#m]Hodiny se zastaví a v \[E]devět třicet v pondělí.\brk
 \[A]Magdaléno, tvoje vlasy, \[F#m]leží pod mou postelí\brk
 \[E]A i když jsme to nechtěli, \[A]oblíkáš se, pročpak asi\brk
