--- a/songs/Malování.tex
+++ b/songs/Malování.tex
@@ -3,12 +3,12 @@
 \[Dm]Nesnaž, se znáš  se\[Dm],  \[Bb] řekni mi co\[C] je ji-\brk
 n\[Dm]ý, jak v kleci máš   \[Dm]se \[Bb]   \[C]pro nevin-\brk
 n\[Dm]ý noci dlou - \[Dm]hý \[Bb]jsou plný \[C]touhy a\brk
-\[Dm]lásky nás   \[Dm]dvou.\brk
+\[Dm]lásky nás   \[Dm]dvou.\[Bb]\brk
 Všechno hezký       \[C]         \brk
 \[Dm]za sebou   \[Dm]mám,\[Bb]   můžu \[C]si za to\brk
 \[Dm]sám,\[Dm]   \[Bb]   v hlavě \[C]hlavolam,\brk
 \[Dm]jen táta a má -  \[Dm]ma \[Bb]   jsou\[C] s náma\brk
-\[Dm]napořád s ná -  \[Dm]ma   \[Bb]         \brk
+\[Dm]napořád s ná -  \[Dm]ma   \[Bb]       \[C]  \brk
 \endverse
 \beginchorus
 To je to tvoje          \[C]         \brk
