--- a/songs/Nechte_Zvony_Znít.tex
+++ b/songs/Nechte_Zvony_Znít.tex
@@ -25,10 +25,12 @@ má pí\[F]seň b\[C]ude r\[G]ůst jak kř\[C]ehkej kr\[G]ápník\brk
 \beginchorus
 \[Em]Jen zvony ví, co jsi mi v\[Am]zal,\brk
 \[D]jen zvony ví, co bude d\[G]ál.\brk
+\endchorus
+\beginverse
 \[C]Přijde jednou sk\[G]ladatel a b\[C]ásník,\brk
 \[C]který umí s\[G]to divnejch snů ž\[C]ít,\brk
 má pí\[F]seň b\[C]ude r\[G]ůst jak kř\[C]ehkej kr\[G]ápník\brk
 \[C]a já prosím: ne\[F]chte zvony z\[Bb]nít  \[G]         \brk
 \[C]a já prosím: ne\[F]chte zvony z\[Bb]nít  \[G]         \brk
 \[C]a já prosím: ne\[F]chte zvony  z\[Bb]nít  \[G]\[C]
-\endchorus\endsong
+\endverse\endsong
