--- a/songs/Okno_Mé_Lásky.tex
+++ b/songs/Okno_Mé_Lásky.tex
@@ -11,7 +11,7 @@
 \endverse
 \beginchorus
 \[Am]A v jeho \[G]lesku vidím \[F]přicházet    \[G]         \brk
-\[Am]sebe ve vě\[G]ku patnáct l\[F]et\brk
+\[Am]sebe ve vě\[G]ku patnáct l\[F]et\[G]\brk
 \[Am]a znovu ří\[G]kám spoustu \[F]něžných vět:\brk
 \[C]Ty, \[F]já, \[C]jsme \[F]my, \[C]my a \[G]náš \[F]svět.\brk
 \endchorus
@@ -22,7 +22,7 @@
 \endverse
 \beginchorus
 \[Am]A v jeho \[G]lesku vidím \[F]přicházet    \[G]         \brk
-\[Am]sebe ve vě\[G]ku patnáct l\[F]et\brk
+\[Am]sebe ve vě\[G]ku patnáct l\[F]et\[G]\brk
 \[Am]a znovu ří\[G]kám spoustu \[F]něžných vět:\brk
 \[C]Ty, \[F]já, \[C]jsme \[F]my, \[C]my a \[G]náš \[F]svět.\brk
 \endchorus
