--- a/songs/Osmý_Den.tex
+++ b/songs/Osmý_Den.tex
@@ -13,7 +13,7 @@ osmý den \[G]schází nám  \[C] \[G]         \brk
 \[D]Tužku nemít \[C]nic mi nepov\[G]íš\brk
 \[D]řekni prosím \[C]aspoň přísl\[G]oví\brk
 \[D]osmý den je \[C]nutný já to \[Ami]vím\brk
-\[C]sedm nocí \[Ami]spíš jen \[G]spíš vždyť víš\brk
+\[C]sedm nocí \[Ami]spíš jen \[G]spíš \[C]vždyť \[G]víš\brk
 \endchorus
 \beginverse
 \[G]Někdo to rád horké ji\[C]ný \[G]ne    \[C]         \brk
@@ -25,12 +25,12 @@ osmý den \[G]scházel nám \[C] \[G]   \[C]         \brk
 \[D]Tužku nemít \[C]nic mi nepov\[G]íš\brk
 \[D]řekni prosím \[C]aspoň přísl\[G]oví\brk
 \[D]osmý den je \[C]nutný já to \[Ami]vím\brk
-\[C]sedm nocí \[Ami]spíš jen \[G]spíš vždyť víš\brk
+\[C]sedm nocí \[Ami]spíš jen \[G]spíš \[C]vždyť \[G]víš\brk
 \endchorus
 \beginchorus
 \[D]Tužku nemít \[C]nic mi nepov\[G]íš\brk
 \[D]řekni prosím \[C]aspoň přísl\[G]oví\brk
 \[D]osmý den je \[C]nutný já to \[Ami]vím\brk
-\[C]sedm nocí \[Ami]spíš jen \[G]spíš vždyť víš\brk
+\[C]sedm nocí \[Ami]spíš jen \[G]spíš \[C]vždyť \[G]víš\brk
 \endchorus
 \endsong
