--- a/songs/Proměny.tex
+++ b/songs/Proměny.tex
@@ -3,31 +3,48 @@
 Darmo sa ty trápíš můj milý synečku                       \[G]         \[C]         \brk
 nenosím ja tebe \[E7]nenosím v sr\[Am]déčku\brk
 Přece tvo\[G]ja \[C]ne \[G]bu \[C]du \[Dm]ani jednu\[E] hodi\[Am] nu\brk
+\endverse
+\beginverse
 \[Am]Copak sobě myslíš\[G] má milá p\[C]anenko\brk
 vždyť ty si to moje \[E7]rozmilé sr\[Am]dénko\brk
 A ty mu\[G]síš \[C]bý \[G]ti \[C]má \[Dm]lebo mi tě\[E] Pánbůh \[Am]dá\brk
+\endverse
+\beginverse
 \[Am]A já sa udělám\[G] malú vev\[C]erečkú\brk
 a uskočím tobě z \[E7]dubu na j\[Am]edličku\brk
 Přece tv\[G]oja \[C]ne \[G]bu \[C]du  \[Dm]ani jednu\[E] hodi\[Am] nu\brk
+\endverse
+\beginverse
 \[Am]A já chovám doma\[G] takú seké\[C]rečku\brk
 ona mi podetne \[E7]dúbek i j\[Am]edličku\brk
 A ty mu\[G]síš \[C]bý \[G]ti \[C]má \[Dm]lebo mi tě\[E] Pánbůh \[Am]dá\brk
+\endverse
+\beginverse
 \[Am]A já sa udělám\[G] tú malú r\[C]ybičkú\brk
 a já ti uplynu \[E7]preč po Dun\[Am]ajíčku\brk
 Přece tv\[G]oja \[C]ne \[G]bu \[C]du  \[Dm]ani jednu\[E] hodi\[Am] nu\brk
+\endverse
+\beginverse
 \[Am]A já chovám doma\[G] takovú \[C]udičku\brk
 co na ni ulovím \[E7]kdejakú r\[Am]ybičku\brk
 A ty pře\[G]ce \[C]bud\[G]eš \[C]má \[Dm]lebo mi tě\[E] Pánbůh \[Am]dá\brk
-\[Am]  \[F] \[C] \[F] \[C] \[G]         \brk
+\endverse
+\beginverse
 \[Am]A já sa udělám\[G] tú velikú\[C] vranú\brk
 a já ti uletím \[E7]na uherskú\[Am] stranu\brk
 Přece tv\[G]oja \[C]ne \[G]bu \[C]du  \[Dm]ani jednu\[E] hodi\[Am] nu\brk
+\endverse
+\beginverse
 \[Am]A já chovám doma\[G] starodávnú\[C] kušu\brk
 co ona vystřelí \[Dm]všeckým vranám\[Am] dušu\brk
 A ty mu\[G]síš \[C]bý \[G]ti \[C]má \[Dm]lebo mi tě\[E] Pánbůh \[Am]dá\brk
+\endverse
+\beginverse
 \[Am]A já sa udělám\[G] hvězdičkú na\[C] nebi\brk
 a já budu lidem \[E7]svítiti n\[Am]a zemi\brk
 Přece tv\[G]oja \[C]ne \[G]bu \[C]du  \[Dm]ani jednu\[E] hodi\[Am] nu\brk
+\endverse
+\beginverse
 \[Am]A sú u nás doma\[G] takoví hvě\[C]zdáři\brk
 co vypočítajú \[E7]hvězdičky na\[Am] nebi\brk
 A ty mu\[G]síš \[C]bý \[G]ti \[C]má \[Dm]lebo mi tě\[E] Pánbůh \[Am]dá\brk
