--- a/songs/Radioactive.tex
+++ b/songs/Radioactive.tex
@@ -2,7 +2,7 @@
 \beginverse
 \[Am]I'm waking up\[C] to ash and du\[G]st\brk
 I wipe my \[D]brow and I sweat my r\[Am]ust\brk
-I'm breathing \[C]in the chemica\[G]ls  (Gasp)\brk
+I'm breathing \[C]in the chemica\[G]ls  (Gasp)\[D]\brk
 \[Am]I'm breaking in\[C], shaping up\[G], then checking ou\[D]t on the prison bus \[Am]         \brk
 This is \[C]it, the apoca\[G]lypse\brk
 Wh\[D]oa\brk
