--- a/songs/Ráda_Se_Miluje.tex
+++ b/songs/Ráda_Se_Miluje.tex
@@ -33,5 +33,5 @@ vrabci se na plotě\[G]  háda\[C] jí,\brk
 \[Am]Ráda se miluje,  r\[G]áda   \[C]jí,\brk
 \[F]ráda si \[Em] jenom tak \[Am] zpívá,\brk
 vrabci se na plotě\[G]  háda\[C] jí,\brk
-\[F] kolik že\[Em]  času jí\[Am]   A D G B\brk
+\[F] kolik že\[Em]  času jí\[Am] zbývá.
 \endchorus\endsong
