--- a/songs/Sametová.tex
+++ b/songs/Sametová.tex
@@ -12,7 +12,7 @@ pou\[G]čen z předchozích nez\[C]darů se\[G]strojil elektrickou kyt\[C]aru\br
 a ro\[G]ck'n'roll byl \[Em]zrovna narozený d\[C]ítě.    \[D]         \brk
 \endverse
 \beginchorus
-Vzp\[G]omínáš, takys' tu žil\[D]a, a ned\[Em]ělej, že si jiná,\brk
+Vzp\[G]omínáš, takys' tu žil\[D]a, a ned\[Em]ělej, že si jiná,\[C]\brk
 taková mal\[G]á pilná vče\[D]la, taková cel\[C]á   s\[D]ametová. \[G]         \brk
 \endchorus
 \beginverse
@@ -28,7 +28,7 @@ a s\[G]tarej dobrej satanáš h\[C]raje u nás\[G] v hospodě ma\[C]riáš\brk
 a p\[G]azoura se mu \[C]trumfama jenom\[D] hemží.\brk
 \endverse
 \beginchorus
-Vzp\[G]omínáš, už je to jin\[D]ak, a jde\[Em] z toho na mě zima,\brk
+Vzp\[G]omínáš, už je to jin\[D]ak, a jde\[Em] z toho na mě zima,\[C]\brk
 ty si hol\[G]ka tehdá byl\[D]a, taková cel\[C]á   s\[D]ametová. \[G]         \brk
 \endchorus
 \beginverse
@@ -38,8 +38,8 @@ při\[G]šel a zase odešel a ni\[C]kdo se kvů\[G]li tomu nevěš\[C]el\brk
 a p\[G]o něm tu zbyl\[C]y samý volný z\[D]óny.\brk
 \endverse
 \beginchorus
-Vzp\[G]omínáš, jak si se měl\[D]a, kdy\[Em]ž jsi nic nevěděla,\brk
+Vzp\[G]omínáš, jak si se měl\[D]a, kdy\[Em]ž jsi nic nevěděla,\[C]\brk
 byla to tak\[G]ová krásná cel\[D]a, a byla cel\[C]á..  \[D] \brk
-Vzp\[G]omínáš, jak si se měl\[D]a, kdy\[Em]ž jsi nic nevěděla,\brk
+Vzp\[G]omínáš, jak si se měl\[D]a, kdy\[Em]ž jsi nic nevěděla,\[C]\brk
    byla to \[G]taková krásná \[D]cela, a byla \[C]celá \[D]    sametová.
 \endchorus\endsong
