--- a/songs/Sbírka_Zvadlejch_Růží.tex
+++ b/songs/Sbírka_Zvadlejch_Růží.tex
@@ -44,7 +44,7 @@ marně v\[G]zpomínáš\brk
 chtělas n\[E]a pár chvil\brk
 vzít \[H]do nebe a \[A]dál\brk
 v růžích \[G]usínáš\brk
-jsem n\[F]oční duch ne král\brk
+jsem n\[F]oční duch ne král\[D]\brk
 \endchorus
 \beginverse
 \[A]Netvař se tak na mě že jsi\brk
