--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Wed Jul 12 07:35:46 CEST 2023 by link-doc
+% Automatically generated at Sun Aug 13 17:26:34 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -61,10 +61,8 @@
 \input{songs/Jožin_Z_Bažin}
 \input{songs/Každý_Ráno}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
-\input{songs/Když_Nemůžeš_Tak_Přidej}
 \input{songs/Klára}
 \input{songs/Královna_Z_Dundrum_Bay}
-\input{songs/Krátke_Lásky}
 \input{songs/Kráľovna_Bielych_Tenisiek}
 \input{songs/Kupte_Si_Hřebeny}
 \input{songs/Kutil}
@@ -99,18 +97,14 @@
 \input{songs/Netušim}
 \input{songs/Neviem_Byť_Sám}
 \input{songs/Okno_Mé_Lásky}
-\input{songs/On_Top_Of_The_World}
 \input{songs/Osmý_Den}
 \input{songs/Panic}
 \input{songs/Pažitka}
-\input{songs/Perfect}
 \input{songs/Piano_Man}
 \input{songs/Pocity}
 \input{songs/Pohoda}
-\input{songs/Pompeii}
 \input{songs/Proklínám}
 \input{songs/Proměny}
-\input{songs/Ptáčata}
 \input{songs/Radioactive}
 \input{songs/Ring-O-Ding}
 \input{songs/Riptide}
@@ -175,6 +169,7 @@
 \input{songs/ŽŽ_HonzikSongs/House_Of_Memories}
 \input{songs/ŽŽ_HonzikSongs/Love_Again}
 \input{songs/ŽŽ_HonzikSongs/Matfyzák_Na_Discu}
+\input{songs/ŽŽ_HonzikSongs/Pompeii}
 \input{songs/ŽŽ_HonzikSongs/Sweater_Weather}
 \input{songs/ŽŽ_HonzikSongs/The_Islander}
 \input{songs/ŽŽ_HonzikSongs/The_Middle}
@@ -192,9 +187,14 @@
 \input{songs/ŽŽ_YbokemSongs/Cesta_Z_Města}
 \input{songs/ŽŽ_YbokemSongs/Dont_Go_Breaking_My_Heart}
 \input{songs/ŽŽ_YbokemSongs/Jdevozem}
+\input{songs/ŽŽ_YbokemSongs/Když_Nemůžeš_Tak_Přidej}
+\input{songs/ŽŽ_YbokemSongs/Krátke_Lásky}
 \input{songs/ŽŽ_YbokemSongs/Moonlight_Shadow}
 \input{songs/ŽŽ_YbokemSongs/Not_Fair}
+\input{songs/ŽŽ_YbokemSongs/On_Top_Of_The_World}
 \input{songs/ŽŽ_YbokemSongs/One_Of_Us}
+\input{songs/ŽŽ_YbokemSongs/Perfect}
+\input{songs/ŽŽ_YbokemSongs/Ptáčata}
 \input{songs/ŽŽ_YbokemSongs/Runaway_Train}
 \input{songs/ŽŽ_YbokemSongs/Stitches}
 \input{songs/ŽŽ_YbokemSongs/Voda_Živá}
