--- a/songs/Behind_Blue_Eyes.tex
+++ b/songs/Behind_Blue_Eyes.tex
@@ -1,9 +1,9 @@
 \sclearpage\beginsong{Behind Blue Eyes}[by={Limp Bizkit}]
 \beginverse
-\[Em]No one knows what it's \[G]like, to be \[D]the bad man,\brk
-To be the \[C]sad man,\[A] behind blue eyes\brk
-\[Em]No one knows what it's \[G]like to \[D]be hated,\brk
-To be \[C]fated, to telling onl\[A]y lies\brk
+\[Em]No one knows what it's \[G]like, to be \[Dsus2]the bad man,\brk
+To be the \[Cadd9]sad man,\[Asus2] behind blue eyes\brk
+\[Em]No one knows what it's \[G]like to \[Dsus2]be hated,\brk
+To be \[Cadd9]fated, to telling onl\[Asus2]y lies\brk
 \endverse
 \beginchorus
 But my \[C]dreams\[D], they aren't as e\[G]mpty,\brk
@@ -13,9 +13,9 @@ My love is \[D]vengeance that's never \[Asus2]free\brk
 \endchorus
 \beginverse
 \[Em]No one knows what it's \[G]like to feel these fe\[Dsus2]elings\brk
-Like I \[C]do, and I blame \[Asus2]you\brk
+Like I \[Cadd9]do, and I blame \[Asus2]you\brk
 \[Em]No one bites back as \[G]hard on their \[Dsus2]anger\brk
-None of \[C]my pain and woe, can show t\[Asus2]hrough\brk
+None of \[Cadd9]my pain and woe, can show t\[Asus2]hrough\brk
 \endverse
 \beginchorus
 But my \[C]dreams\[D], they aren't as e\[G]mpty,\brk
@@ -25,10 +25,10 @@ My love is \[D]vengeance that's never \[Asus2]free\brk
 \endchorus
 \beginverse
 \[Em]No one knows what its l\[G]ike\brk
-To be mistr\[Dsus2]eated, to be def\[C]eated\brk
+To be mistr\[Dsus2]eated, to be def\[Cadd9]eated\brk
 \[Asus2]Behind blue eyes\brk
 \[Em]No one knows how to s\[G]ay\brk
-That they're s\[Dsus2]orry and don't w\[C]orry\brk
+That they're s\[Dsus2]orry and don't w\[Cadd9]orry\brk
 I'm not t\[Asus2]elling lies\brk
 \endverse
 \beginchorus
@@ -39,5 +39,5 @@ My love is \[D]vengeance that's never \[Asus2]free\brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
 \[Em]No one knows what it's \[G]like, to be the \[Dsus2]bad man,\brk
-To be the \[C]sad man, be\[A]hind blue eyes\brk
+To be the \[Cadd9]sad man, be\[A]hind blue eyes\brk
 }\endverse\endsong
