--- a/songs/Kráľovna_Bielych_Tenisiek.tex
+++ b/songs/Kráľovna_Bielych_Tenisiek.tex
@@ -20,27 +20,27 @@
 \[G]Čo viac už možeš \[E]chcieť\brk
 \[Am]Od rána stráži tele\[Fmaj7]fón\brk
 \[G]Čo ak by práve \[E]on\brk
-Beznádej \[F]s nádejou\[G] celý deň \[F]nejde von\brk
+Beznádej \[F]s nádejou\[G] celý deň \[F]nejde von\[G]\brk
 \[Am]  \[F] \[Am]  \[F]         \brk
 }\endverse
 \beginverse
 \[Am]Mlad\[C]á skladá \[Fmaj7]z úlomkov \[G]svet\brk
 \[Am]Hľad\[C]á, hľadá \[Fmaj7]tvár, akej \[G]niet\brk
 \[F]Trápenie sno\[G]v, vieš že\brk
-\[Am]Mal si byť \[G]dávno s \[F]ňou\brk
+\[Am]Mal si byť \[G]dávno s \[F]ňou\[G]\brk
 \endverse
 \beginchorus
 \[C]Skús ju n\[G]ájsť\brk
 \[Bb]Na známych adresách, \[F]ľudí sa nepýtaj\brk
 \[C]Skús ju n\[G]ájsť\brk
-\[Bb]Je v sebe ukrytá, \[F]pred tebou ukrytá\brk
+\[Bb]Je v sebe ukrytá, \[F]pred tebou ukrytá\[G]\brk
 \endchorus
 \beginverse*{\nolyrics [Bridge]: 
 \[Am]Kráľovná bielych teni\[Fmaj7]siek\brk
 \[G]Čo viac už možeš \[E]chcieť\brk
 \[Am]V očiach má známe vide\[Fmaj7]o\brk
 \[G]Na ktorom príde \[E]on\brk
-Beznádej \[F]s nádejou\[G] celý deň \[F]nejde von\brk
+Beznádej \[F]s nádejou\[G] celý deň \[F]nejde von\[G]\brk
 }\endverse
 \beginchorus
 \[C]Skús ju n\[G]ájsť\brk
@@ -56,6 +56,6 @@ Beznádej \[F]s nádejou\[G] celý deň \[F]nejde von\brk
 \[C]Skús ju n\[G]ájsť\brk
 \[Bb]Bež v bielych teniskách, \[F]po blate, na snehu\brk
 \[C]Skús ju n\[G]ájsť\brk
+\[Bb]Je v sebe ukrytá, \[F]je v sebe ukrytá\brk
 \endchorus
-\beginchorus
-\endchorus\endsong
+\endsong
