--- a/songs/Kutil.tex
+++ b/songs/Kutil.tex
@@ -7,13 +7,13 @@ Mám ženu, je mladá \[F#m]krásná chy\[A]trá přívětivá.\[E]\brk
 Má jednu malinkatou chybu,\brk
 že si \[F#m]se mnou vů\[A]bec nepovídá.\[E]\brk
 \endverse
-\beginverse*{\nolyrics [Bridge]: 
+\beginchorus 
 A tak \[F#m]hledám holku sdílnou,\brk
 co by chtěla kluka s dílnou, \brk
 \[A]abych nebyl sám. \[B]\brk
 \[E]    \[F#m]     \[A]    \[E]    \[F#m]     \[A]    \[E]\brk
-}\endverse
-\beginchorus
+\endchorus
+\beginverse
 Jsem kutil, mám malou \[F#m]dílnu, víc \[A]mě nezajímá.\[E]\brk
 \[E]Ma, má, ma, ma, ma, ma, má... má práce je moje hobby.\brk
 Šťastnej \[F#m]člověk kaž\[A]dej, kdo to tak má.\[E]\brk
@@ -21,10 +21,11 @@ Ma, má, ma, ma, ma, ma, má...\brk
 Mám ženu, je mladá \[F#m]krásná chy\[A]trá přívětivá.\[E]\brk
 \[E]Ma, má, ma, má... Má jednu malinkatou chybu,\brk
 že si \[F#m]se mnou vů\[A]bec nepovídá.\[E]\brk
-\endchorus
-\beginverse*{\nolyrics [Bridge]: 
+\endverse
+\beginchorus 
 A tak \[F#m]hledám holku sdílnou,\brk
 co by chtěla kluka s dílnou, \brk
 \[A]abych nebyl sám. \[B]\brk
-}\endverse
+\[E]    \[F#m]     \[A]    \[E]    \[F#m]     \[A]    \[E]\brk
+\endchorus
 \endsong
