--- a/songs/Riptide.tex
+++ b/songs/Riptide.tex
@@ -29,7 +29,6 @@ And \[Am]she's been living \[G]on the highest sh\[C]elf\brk
 To the \[Am]dark side, \[G]I wanna be your \[C]left hand man\brk
 I \[Am]love you \[G]when you're singing that \[C]song, and I got a lump\brk
 In my \[Am]throat, 'cause \[G]you're gonna sing the wo\[C]rds wrong\brk
-e\[C]|-------3---------|\brk
 \endchorus
 \beginverse*{\nolyrics [Bridge]: 
 \[Am]I just wanna, I just wanna \[G]know\brk
@@ -52,5 +51,5 @@ In my \[Am]throat, 'cause \[G]you're gonna sing the wo\[C]rds wrong\brk
 To the \[Am]dark side, \[G]I wanna be your \[C]left hand man\brk
 I \[Am]love you \[G]when you're singing that \[C]song, and I got a lump\brk
 In my \[Am]throat, 'cause \[G]you're gonna sing the words \[C]wrong yeah, I got a lump\brk
-In my \[Am]throat, 'cause \[G]you're gonna sing the words \[C]wrong[/tab]quot;,quo\brk
+In my \[Am]throat, 'cause \[G]you're gonna sing the words \[C]wrong.\brk
 \endchorus\endsong
