--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sat Aug 19 13:47:52 CEST 2023 by link-doc
+% Automatically generated at Sun Aug 20 16:05:40 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -24,6 +24,7 @@
 \input{songs/Cant_Help_Falling_In_Love}
 \input{songs/Cesta}
 \input{songs/Chci_Zas_V_Tobě_Spát}
+\input{songs/Cizinec}
 \input{songs/Co_Z_Tebe_Bude}
 \input{songs/Darmoděj}
 \input{songs/Dej_Mi_Víc_Své_Lásky}
@@ -37,6 +38,8 @@
 \input{songs/Duše_Z_Gumy}
 \input{songs/Ententýky}
 \input{songs/Fair_Play}
+\input{songs/Fairytale_Gone_Bad}
+\input{songs/Falling_Slowly}
 \input{songs/Flowers}
 \input{songs/Get_Lucky}
 \input{songs/Good_Riddance_Time_Of_Your_Life}
@@ -51,8 +54,10 @@
 \input{songs/Hollywood_Hills}
 \input{songs/Honey_Honey}
 \input{songs/Hotel_California}
+\input{songs/House_Of_The_Rising_Sun}
 \input{songs/Hrobar}
 \input{songs/Hruška}
+\input{songs/Hvězda_Na_Vrbě}
 \input{songs/Hvězdář}
 \input{songs/Im_A_Believer}
 \input{songs/Jarní_Tání}
@@ -64,6 +69,7 @@
 \input{songs/Každý_Ráno}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
 \input{songs/Klára}
+\input{songs/Kometa}
 \input{songs/Královna_Z_Dundrum_Bay}
 \input{songs/Kráľovna_Bielych_Tenisiek}
 \input{songs/Kupte_Si_Hřebeny}
@@ -93,13 +99,18 @@
 \input{songs/Mám_Jizvu_Na_Rtu}
 \input{songs/Místečko}
 \input{songs/Můj_Svět}
+\input{songs/Nad_Stádem_Koní}
 \input{songs/Naděje}
 \input{songs/Nagasaki_Hirošima}
 \input{songs/Nechte_Zvony_Znít}
+\input{songs/Nejlíp_Jim_Bylo}
 \input{songs/Netušim}
 \input{songs/Neviem_Byť_Sám}
+\input{songs/Nikdy_Nic_Nebylo}
 \input{songs/Okno_Mé_Lásky}
 \input{songs/Osmý_Den}
+\input{songs/Otherside}
+\input{songs/Otázky}
 \input{songs/Panic}
 \input{songs/Pažitka}
 \input{songs/Piano_Man}
@@ -115,6 +126,7 @@
 \input{songs/Sbohem_Galánečko}
 \input{songs/Sbírka_Zvadlejch_Růží}
 \input{songs/Sen}
+\input{songs/Severní_Vítr}
 \input{songs/Sila_Starejch_Vin}
 \input{songs/Slunovrat}
 \input{songs/Srdce_Jako_Knize_Rohan}
@@ -134,6 +146,7 @@
 \input{songs/V_Blbým_Věku}
 \input{songs/V_Lese}
 \input{songs/Vakuum}
+\input{songs/Variace_Na_Renesanční_Téma}
 \input{songs/Veď_mě_dál,_cesto_má}
 \input{songs/Viva_La_Vida}
 \input{songs/Vymyslená}
