--- a/songs/Jožin_Z_Bažin.tex
+++ b/songs/Jožin_Z_Bažin.tex
@@ -2,7 +2,7 @@
 \beginverse
 \[Em]Jedu takhle tábořit \[B7]škodou sto na \[Em]Oravu.\brk
 \[Em]Spěchám, proto riskuji, \[B7]projíždím přes \[Em]Moravu.\brk
-\[D7]Řádí tam to \[G]strašidlo, \[D7]vystupuje z \[G]ba\[B7]žin,\brk
+Řádí tam to \[G]strašidlo, \[D7]vystupuje z \[G]ba\[B7]žin,\brk
 \[Em]žere hlavně Pražáky, \[B7]jmenuje se \[Em]Jož\[D7]in.\brk
 \endverse
 \beginchorus
@@ -14,13 +14,15 @@ Jožin z bažin kouše, saje, \[G]rdousí.\brk
 \[C]platí jen a \[G]pouze \[D7]práškovací letad\[G]lo. \[B7]         \brk
 \endchorus
 \beginverse
-\[Em]Projížděl jsem dědinou \[B7]cestou na Vi\[Em]zovice.\brk
+\[Em]Projížděl jsem dědinou \[B7]cestou na Vi\[Em]zovice.\brk  
 \[Em]Přivítal mě předseda, \[B7]řek mi u sliv\[Em]ovice:\brk
+\[D7]"Živého či \[G]mrtvého Jožina \[D7]kdo \[G]přive\[B7]de,
 \[Em]tomu já dám za ženu \[B7]dceru a půl \[Em]JZD\[D7].\brk
 \endverse
 \beginchorus
-\[Em]Říkám:  mi předsedo leta\[B7]dlo a práš\[Em]ek,\brk
-Předseda mi vyhověl, ráno jsem se vznesl,  \[G]        \[D7]              \[G] \[B7]         \brk
+\[Em]Říkám: Dej mi předsedo leta\[B7]dlo a práš\[Em]ek,\brk
+\[Em]Jožina ti přivedu, \[B7]nevidím v tom \[Em]háček."
+\[D7]Předseda mi \[G]vyhověl, \[D7]ráno jsem se vz\[G]nesl,  
 \[Em]na Jožina z letadla \[B7]prášek pěkně \[Em]kles\[D7]l.\brk
 \endchorus
 \beginchorus
